@@ -8,7 +8,7 @@
 
 <H1 CLASS="title">What's New in CUPS 1.5</H1>
 
-<P>CUPS 1.5 adds over ??? changes and new features to CUPS 1.4.x. This page provides a high-level outline of these changes. If you have never used CUPS before, read the <A HREF="overview.html">"Overview of CUPS"</A> document instead.</P>
+<P>CUPS 1.5 many changes and new features to CUPS 1.4.x. This page provides a high-level outline of these changes. If you have never used CUPS before, read the <A HREF="overview.html">"Overview of CUPS"</A> document instead.</P>
 
 <H2 CLASS="title"><A NAME="COMMANDS">Commands</A></H2>
 
@@ -23,7 +23,7 @@
 
 <H2 CLASS="title"><A NAME="SCHEDULER">Scheduler</A></H2>
 
-<OL START="3">
+<OL START="4">
 
 	<LI><EM>Filter security;</EM> Filters and backends must now have group write permissions disabled.</LI>
 
@@ -32,7 +32,7 @@
 
 <H2 CLASS="title"><A NAME="FILTERS">Print Filters</A></H2>
 
-<OL START="4">
+<OL START="5">
 
 	<LI><EM>HP-GL/2 filter;</EM> The HP-GL/2 filter is no longer provided with CUPS.</LI>
 
@@ -47,14 +47,15 @@
 
 <H2 CLASS="title"><A NAME="CUPSAPI">CUPS API</A></H2>
 
-<OL START="6">
+<OL START="9">
 
 	<LI><EM>CUPS headers;</EM> Changes to the main CUPS header may require code changes to applications and toolkits. Users of PPD functions must now include the &lt;cups/ppd.h&gt; header file explicitly since the &lt;cups/cups.h&gt; header no longer does so.</LI>
+
+	<LI><EM>HTTP support:</EM> Applications can now set a per-connection timeout interval and callback for HTTP operations as well as query and set SSL/TLS X.509 certificates.</LI>
 
 	<LI><EM>Raster support;</EM> The CUPS raster functions now support the creation of PWG Raster files and streams, and a new callback-based context function allows reading and writing from objects other than file descriptors.</LI>
 
 </OL>
-
 
 </BODY>
 </HTML>
