@@ -3,6 +3,10 @@ CHANGES.txt - 2011-05-20
 
 CHANGES IN CUPS V1.5b1
 
+	- The CUPS library now supports per-connection HTTP timeouts and
+	  callbacks.
+	- The CUPS library now supports (limited) SSL/TLS X.509 certificate
+	  validation and revocation (STR #1616)
 	- Updated the PostScript filter to support IncludeFeature in more
 	  circumstances (STR #3417)
 	- The schedule did not correctly parse some IPv6 addresses and masks in
